--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
+        "@tailwindcss/aspect-ratio": "^0.4.2",
         "@vitejs/plugin-vue": "^4.1.0",
         "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
@@ -20,6 +21,8 @@
     "dependencies": {
         "@headlessui/vue": "^1.7.12",
         "@heroicons/vue": "^2.0.16",
-        "vue-loader": "^17.0.1"
+        "vue-axios": "^3.5.2",
+        "vue-loader": "^17.0.1",
+        "vue-router": "^4.1.6"
     }
 }
