feat:  implementação inicial do funcionamento do carrinho

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "@headlessui/vue": "^1.7.12",
         "@heroicons/vue": "^2.0.16",
+        "pinia": "^2.0.33",
         "vue-axios": "^3.5.2",
         "vue-loader": "^17.0.1",
         "vue-router": "^4.1.6"
